# yiilian

./: .gitignore  Cargo.toml  log4rs.yml  yiilian-crawler.yml
doc/bt spec/: bep0003.md  bep0009.md  bep0010.md  bep0011_en.md  bep0027.md  bep0038.md  bep0044_en.md  bep0046_en.md  bep0047.md  bep0052.md  introduce.md
doc/bt spec/bep0003/: bep0003.md
doc/bt spec/bep0010/: bep0010.md
doc/bt spec/bep0025/: bep0025.md
doc/bt spec/bep0038/: bep0038.md
doc/bt spec/bep0047/: bep0047.md
doc/bt spec/bep0052/: bep0052.md
doc/bt spec/res/: BitTorrentSpecification - TheoryOrg.mhtml  bep52.eddx
doc/learning_log/: about_bittorrent_v2.md  about_frame.md  dht.md
dump/: bt_handshake.pcapng  sample.txt
migrations/: 20240403134816_db_init.sql
torrent/: 1.torrent  2.torrent
yiilian-bt/: Cargo.toml  yiilian-bt.yml
yiilian-bt/examples/: download_metadata.rs  handshake_utp.rs  handshake_utp2.rs
yiilian-bt/src/: bt_downloader.rs  lib.rs
yiilian-bt/src/common/: config.rs
yiilian-bt/src/data/frame/: handshake.rs
yiilian-bt/src/data/frame/extension/: ut_metadata.rs
yiilian-core/: Cargo.toml
yiilian-core/examples/: async_service.rs  decode.rs  expect.rs  test_async_service.rs  working_dir.rs
yiilian-core/src/: error.rs  lib.rs  main.rs  util.rs
yiilian-core/src/common/: config.rs  error.rs  expect_log.rs  mod.rs  shutdown.rs  util.rs  working_dir.rs
yiilian-core/src/data/: bencode.rs  bencode_frame.rs  body.rs  bt_handshake.rs  bt_torrent.rs  frame.rs  mod.rs  request.rs  response.rs
yiilian-core/src/filter/: dammy_filter.rs  dummy_fiulter.rs  log_filter.rs  mod.rs
yiilian-core/src/net/: block_list.rs  io.rs  mod.rs  server.rs  tcp.rs  udp.rs
yiilian-core/src/service/: builder.rs  dht_service.rs  dummy_service.rs  event_service.rs  firewall_service.rs  identity.rs  layer.rs  log_service.rs  make.rs  mod.rs  raw_service.rs  service.rs  stack.rs  test_service.rs  util.rs
yiilian-core/src/udp/: mod.rs  net.rs  receiver.rs  server.rs
yiilian-crawler/: Cargo.toml  log4rs.yml  res_template.db  yiilian-crawler.yml
yiilian-crawler/examples/: baidu.rs  bt_handshake.rs  download_metadata.rs  folder_mod.rs  handshake.rs  handshake_utp.rs  handshake_utp2.rs  push_dir_message.rs  tcp_listen.rs  udp_socket.rs
yiilian-crawler/src/: crawler.rs  info_message.rs  lib.rs  main.rs  peer_wire.rs
yiilian-crawler/src/common/: config.rs  mod.rs  util.rs
yiilian-crawler/src/data/: frame.rs
yiilian-crawler/src/data/frame/: extension.rs  handshake.rs  peer_message.rs
yiilian-crawler/src/data/frame/extension/: ut_metadata.rs
yiilian-crawler/src/event/: announce_listener.rs  mod.rs
yiilian-crawler/src/net/: mod.rs  tcp.rs  utp.rs
yiilian-dht/: Cargo.toml
yiilian-dht/examples/: dht_client.rs  dht_server.rs  test_client.rs  worker.rs
yiilian-dht/src/: dht.rs  lib.rs  main.rs
yiilian-dht/src/common/: context.rs  id.rs  ip.rs  mod.rs  setting.rs  state.rs  util.rs
yiilian-dht/src/data/: announce_peer.rs  body.rs  error.rs  find_node.rs  find_node_reply.rs  frame.rs  get_peers.rs  get_peers_reply.rs  krpc_frame.rs  mod.rs  ping.rs  ping_announce_replay.rs  util.rs
yiilian-dht/src/dht/: dht_builder.rs
yiilian-dht/src/event/: event.rs  event_listener.rs  event_manager.rs  mod.rs
yiilian-dht/src/net/: client.rs  mod.rs  server.rs
yiilian-dht/src/net/service/: dummy_service.rs  log_service.rs  make.rs  mod.rs  router_service.rs
yiilian-dht/src/peer/: mod.rs  peer.rs  peer_manager.rs
yiilian-dht/src/routing_table/: bucket.rs  mod.rs  node.rs  persist.rs  routing_table.rs
yiilian-dht/src/service/: dummy_service.rs  firewall_service.rs  krpc_service.rs  mod.rs  router_service.rs
yiilian-dht/src/transaction/: get_peers_result.rs  mod.rs  transaction.rs  transaction_manager.rs
yiilian-dl/: Cargo.toml  log4rs.yml  yiilian-dl.yml
yiilian-dl/examples/: download_info.rs  download_metadata.rs  handshake_utp.rs  handshake_utp2.rs  parse_torrent.rs  stream_server.rs  test.torrent
yiilian-dl/src/: bt_downloader.rs  command.rs  event.rs  lib.rs  peer_wire.rs
yiilian-dl/src/bt/: bt_command.rs  bt_downloader.rs  mod.rs  peer_wire.rs
yiilian-dl/src/bt/common/: config.rs
yiilian-dl/src/bt/data/: bt_torrent.rs  frame.rs  mod.rs
yiilian-dl/src/bt/data/frame/: extension.rs  peer_message.rs
yiilian-dl/src/bt/data/frame/extension/: ut_metadata.rs
yiilian-dl/src/bt/net/: tcp.rs  utp.rs
yiilian-dl/src/common/: config.rs
yiilian-dl/src/net/: tcp.rs  utp.rs
yiilian-index/: .env  Cargo.toml  log4rs.yml
yiilian-index/examples/: basic_search.rs  doc_res.rs  index_nest.rs  open_or_create.rs  persist_and_index.rs  persist_res.rs  update.rs
yiilian-index/migrations/: 20240403134816_db_init.sql  res.db-shm  res.db-wal
yiilian-index/src/: info_db_to_doc.rs  info_mq_to_db.rs  lib.rs  res_info.rs  res_info_doc.rs  res_info_record.rs  resource_index.rs
yiilian-mq/: Cargo.toml  test_log_data_file.txt  test_log_index_file.txt
yiilian-mq/examples/: mq_sevice.rs  mq_test.rs
yiilian-mq/src/: consumer_offsets.rs  engine.rs  lib.rs  log_segment.rs  main.rs  message.rs  segment.rs  topic.rs
yiilian-mq/src/message/: in_message.rs
yiilian-mq/src/segment/: active_segment.rs  log_data.rs  log_index.rs  mod.rs
yiilian-mq/src/segment/log_data/: log_data_file.rs
yiilian-mq/src/segment/log_index/: log_index_file.rs
yiilian-raw/: Cargo.toml
yiilian-raw/examples/: boardcast.rs  channel.rs  hello.rs
yiilian-raw/src/: lib.rs  main.rs
yiilian-raw/src/data/: mod.rs  raw_body.rs
yiilian-raw/src/net/: server.rs
yiilian-raw/src/net/service/: dummy_service.rs  log_service.rs  mod.rs  raw_service.rs
yiilian-raw/src/service/: dummy_service.rs  log_service.rs  raw_service.rs
yiilian-web/: .env  Cargo.toml
yiilian-web/examples/: .tracing_it.env  axum_tracing.rs  this_error.rs  tracing_it.rs
yiilian-web/src/: lib.rs  main.rs
yiilian-web/src/common/: app_state.rs  mod.rs  template.rs  web_error.rs
yiilian-web/src/handle/: handle_error_layer.rs  mod.rs  root.rs  search.rs
yiilian-web/web/: index.tera  index.tpl
yiilian-web/web/static/: 404.html
