[workspace]
members = [ 
    "yiilian-core", 
    "yiilian-raw", 
    "yiilian-dht", 
    "yiilian-crawler", 
    "yiilian-mq", 
    "yiilian-bt", 
]
resolver = "2"

[patch.crates-io]
yiilian-core = { path = "./yiilian-core" }
yiilian-dht = { path = "./yiilian-dht" }
yiilian-mq = { path = "./yiilian-mq" }
yiilian-bt = { path = "./yiilian-bt" }

[profile.bench]
lto = "fat"
codegen-units = 1
