[workspace]
members = [ 
    "yiilian-core", 
    "yiilian-raw", 
    "yiilian-dht", 
    "yiilian-crawler", 
    "yiilian-mq", 
    "yiilian-dl",
    "yiilian-index", 
    "yiilian-web", 
]
resolver = "2"

[patch.crates-io]
yiilian-core = { path = "./yiilian-core" }
yiilian-dht = { path = "./yiilian-dht" }
yiilian-mq = { path = "./yiilian-mq" }
yiilian-dl = { path = "./yiilian-dl" }
yiilian-index = { path = "./yiilian-index" }

[profile.bench]
lto = "fat"
codegen-units = 1
