[package]
name = "yiilian-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log ="0.4"
tokio = { version = "1", features = ["full"] }
bytes = "1.5.0"
rand = "0.8"
derivative = "2.2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
fnv = "1"
futures = "0.3"
backtrace = "0.3"
panic-message = "0.3"
