[package]
name = "yiilian-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log ="0.4"
tokio = { version = "1", features = ["full"] }
bytes = "1.5"
rand = "0.8"
derivative = "2"
chrono = "0.4"
fnv = "1"
futures = "0.3"
backtrace = "0.3"
panic-message = "0.3"
lru = "0.12"
hex = "0.4"
sha-1 = "0.10"
log4rs = { version = "1", features = ["background_rotation", "gzip"] }
home = "0.5"

[dev-dependencies]
env_logger = "0.10"
dotenv = "0.15"