[package]
name = "yiilian-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_yaml = "0.9.25"
yiilian-core = "0.1"
yiilian-dht = "0.1"
log ="0.4"
log4rs = { version = "1", features = ["background_rotation", "gzip"] }
bloomfilter = { version = "1", features = ["serde"] }
bincode = "1"
hex = "0.4"
bytes = "1.5"
num_enum = "0.7"
rand = "0.8"
utp = "0.7"
utp-rs = "0.1.0-alpha.8"