[package]
name = "yiilian-dht"
version = "0.1.0"
edition = "2021"

[dependencies]
yiilian-core = "0.1"
tokio = {version = "1", features = ["full"]}
log ="0.4"
bytes = "1.5.0"
crc = "3"
rand = "0.8"
hex = "0.4"
chrono = "0.4"
derivative = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
lru = "0.12"