[package]
name = "yiilian-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.19"
tempfile = "3.10"
dysql = { version = "2", features = ["sqlx-sqlite"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "chrono", "uuid" ], optional = true } 
tokio = { version = "1", features = ["full"] }