[package]
name = "yiilian-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yiilian-core = "0.1"
once_cell = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenv = "0.15"
tokio = {version = "1", features = ["full"]}
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
tera = "1"
tantivy = "0.19"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tower = { version = "0.4", features = ["full"]}